# myabcs

./: .gitignore  AUTHORS  BSDmakefile  BUGS.txt  CHANGES.txt  CMakeLists.txt  COPYING  ChangeLog  GNUmakefile  LICENSE.txt  Makefile-Windows  Makefile.BSD  Makefile.GNU  Makefile.MinGW  README.md  README.txt  TODO  TODO.txt  changelog.txt  configure  configure.ac  icon.xpm  index.html  index.js  index.php  make_definitions  make_directives  make_functions  myabcs.desktop  redirect.html  resources.rc  styles.css  win_resources.rc
.github/workflows/: build_tests.yml
branches/0.4.5/: Makefile  Makefile.BSD  Makefile.GNU  README.txt  TODO.txt  make_definitions  make_directives
branches/BRANCH_0.4.5/: BUGS.txt  GNUmakefile  Makefile-Windows  Makefile.MinGW  README.txt  make_directives
cmake/: dependencies.cmake  options.cmake  print_config.cmake  targets.cmake
data/audio/: accordion.flac  airplane.flac  angelfish.flac  bird.flac  cat.flac  chalkboard.flac  clarinet.flac  dog.flac  dolphin.flac  drums.flac  egg.flac  electric_guitar.flac  elephant.flac  err.flac  fire.flac  flute.flac  fries.flac  frog.flac  giraffe.flac  grapes.flac  guitar.flac  harp.flac  hat.flac  horn.flac  horse.flac  igloo.flac  ipu.flac  jaguar.flac  jar.flac  jug.flac  jump_rope.flac  kazoo.flac  ladybug.flac  lion.flac  lunchbox.flac  magnet.flac  magnifying_glass.flac  maracas.flac  mouse.flac  noodle.flac  (+39 more)
doc/: LICENSE.txt  README-fonts.md
doc/licenses/: CC-BY-2.0-DE.html  CC-BY-2.5.txt
include/: abc.h  category.h  config.h  creditspanel.h  data.h  env.h  event.h  fonts.h  gnrcabt.h  id.h  imgdisplay.h  log.h  main.h  main_window.h  myabcs.h  paths.h  res.h  resourcelist.h  resourceobject.h  sound.h  window.h
include/res/: PixelOperatorMono.ttf.h  ani_loading.h  failsafe.png.h  failsafe_img.h  logo.h  logo_sdl.h  logo_wx.h  logo_wxsvg.h  myabcs_img.h  pixeloperatormono_ttf.h  sniglet_ttf.h  tbicon.h
js/: main.js  title.js
libraries/: .gitignore  CONFIG-SDL2  CONFIG-SDL2_mixer  CONFIG-bzip2  CONFIG-cairo  CONFIG-cmake  CONFIG-fontconfig  CONFIG-freetype  CONFIG-freetype-hb  CONFIG-gdk-pixbuf  CONFIG-gettext  CONFIG-ghostscript  CONFIG-glib  CONFIG-graphite2  CONFIG-harfbuzz  CONFIG-lcms2  CONFIG-libexif  CONFIG-libexpat  CONFIG-libflac  CONFIG-libiconv  CONFIG-libjpeg-turbo  CONFIG-libmpg123  CONFIG-libogg  CONFIG-libpng  CONFIG-librsvg  CONFIG-libspectre  CONFIG-libtiff  CONFIG-libtool  CONFIG-libvorbis  CONFIG-libxml2  CONFIG-nasm  CONFIG-ncurses  CONFIG-openjpeg  CONFIG-pango  CONFIG-patch  CONFIG-pcre  CONFIG-pixman  CONFIG-pkg-config  CONFIG-poppler  CONFIG-pth  (+7 more)
libraries/CONFIG/: SDL2  SDL2_mixer  bzip2  cairo  cairo-reb  cmake  cxxopts  diffutils  expat  fontconfig  freetype  freetype-hb  freetype-reb  fribidi  gdk-pixbuf  gettext  gettext-reb  ghostscript  glib  glib-reb  gperf  graphite2  groff  harfbuzz  jbigkit  lcms2  libXpm  libarchive  libcroco  libexif  libffi  libflac  libiconv  libiconv-intl  libiconv-reb  libjpeg-turbo  libmpg123  libogg  libpng  librsvg  (+32 more)
libraries/patch/: SDL2_mixer-001-win32-static_only-v2.0.4-HACK-configure-mpg123-link-lshlwapi.patch  cairo-001-win32-static_only-HACK-any2ppm-explicit-link-to-harfbuzz.patch  gettext-001-win32-v0.20.1-relocatex-libintl.patch  gettext-004-win32-script-slash-fix.mingw.patch  gettext-005-win32-always-use-libintl-vsnprintf.mingw.patch  gettext-005-win32-v0.20.1-always-use-libintl-vsnprintf.mingw.patch  gettext-006-win32-dont-include-ctype-after-gnulibs-wctype.mingw.patch  gettext-007-win32-fix-asprintf-conflict.mingw.patch  gettext-008-win32-vs-compatible.patch  gettext-120-win32-v0.20.1-Fix-Woe32-link-errors-when-compiling-with-O0.patch  gettext-121-win32-v0.20.1-keep-posix-path.patch  graphite2-005-any-1.3.13-static.patch  groff-001-any-fix-mom-pdf-symlink.patch  jbigkit-006-win32-2.1-Makefile-fix-dll-dir.patch  jbigkit-007-win32-v2.1-static-only.patch  libXpm-001-win32-xpm.pc.patch  libXpm-002-win32-v3.5.12-fix-pointer-integer-cast.patch  librsvg-006-win32-hack-Makefile-rsvg-convert-link.patch  librsvg-006-win32-static_only-HACK-Makefile-rsvg-convert-link.patch  librsvg-007-any-v2.44.14-no-build-exes.patch  openjpeg-007-any-v2.3.1-jp2-link_jpeg_lzma.patch  openjpeg-008-any-v2.3.1-tiff-link-to-jbig.patch  pthreads-win32-001-any-2.9.1-fix-GNUmakefile-install.patch  wxSVG-001-pkg-config.patch  wxSVG-001-win32-static_only-v1.5.20-HACK-explicit-link-svgview-to-libharfbuzz.patch  wxSVG-002-any-v1.5.20-no-build-svgview.patch  wxWidgets-001-any-link-liblzma-to-libtiff.patch  wxsvg-001-win32-hack-Makefile-svgview-static-harfbuzz.patch  zlib-003-any-dont-put-sodir-into-any-L.mingw.patch  zlib-006-any-add-64bit-functions-and-fix-any-typos.patch
pic/: failsafe.xcf
scripts/: update_copyright.py
sound/: anklet.flac  apple.flac  bagpipes.flac  balloons.flac  bananas.flac  bicycle.flac  cat.flac  cheering.flac  cherries.flac  clock.flac  doll.flac  dolphin.flac  doughnut.flac  drums.flac  earth.flac  easel.flac  electric_guitar.flac  elephant.flac  flute.flac  football.flac  frog.flac  glove.flac  grasshopper.flac  guitar.flac  harp.flac  hot_dog.flac  ice_cream.flac  ice_skate.flac  iguana.flac  juice.flac  ketchup.flac  keyboard.flac  kite.flac  koala.flac  lasagna.flac  lion.flac  lute.flac  mouse.flac  mushroom.flac  necklace.flac  (+32 more)
sound/alpha/: A.flac  D.flac  E.flac  I.flac  M.flac  P.flac  Q.flac  V.flac  W.flac
sound/effect/: clock.flac  grasshopper.flac  horn.flac  jug.flac  raccoon.flac  umbrella.flac  xun.flac
src/: abc.cpp  abc.h  category.cpp  creditspanel.cpp  displayhandler.cpp  event.cpp  fonts.cpp  gnrcabt.cpp  id.cpp  imagehandler.cpp  imgdisplay.cpp  log.cpp  main.cpp  main.h  main_window.cpp  myabcs.cpp  paths.cpp  resourcelist.cpp  resourceobject.cpp  sound.cpp  window.cpp
tags/0.4.4/: GPLv3.rtf  Makefile  README.txt
tests/: Makefile  alpha_only.cpp  lists.cpp  play_sound.cpp  sound_test.cpp  thread_event.cpp
trunk/: .svnignore  AUTHORS  BSDmakefile  ChangeLog  Makefile  Makefile.BSD  Makefile.GNU  README.txt  TODO  make_definitions  make_directives
trunk/include/: displayhandler.h  imagehandler.h  (+3 more)
(+94 files in other folders)
